2nd ppt done
